--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-      "name": "Unmei (Destiny) Bot",
-      "description": "A Powerful  Telegram group management bot with anime theme 'Takt OP.Destiny'.",
+      "name": "Zoro Bot",
+      "description": "A Powerful  Telegram group management bot with anime theme 'One Piece'.",
       "keywords": [
          "telegram",
          "advance",
